fix: Customer request and response DTO records